risc0/zirgen/dsl/test/repro/missing_base_switch.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: missing base expression for switch

component Top() {
  x := -> 0;
}

